--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="../css/all.min.css">
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="../css/reset.css"> -->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -98,11 +98,11 @@
 
 
   
-  <script src="../js/jquery-3.6.0.min.js "></script>
-  <script src="../js/all.min.js "></script>
-  <script src="../js/bootstrap.bundle.min.js "></script>
-  <script src="../js/plugins.js "></script>
-  <script src="../js/main.js "></script>
+  <script src="js/jquery-3.6.0.min.js "></script>
+  <script src="js/all.min.js "></script>
+  <script src="js/bootstrap.bundle.min.js "></script>
+  <script src="js/plugins.js "></script>
+  <script src="js/main.js "></script>
 </body>
 
 </html>
